@@ -1,3 +1,8 @@
+2007-09-30 [colin]	3.0.1cvs49
+
+	* src/imap.c
+		Refresh session if needed
+
 2007-09-30 [colin]	3.0.1cvs48
 
 	* src/imap.c
